scripts/cloudretro-custom/cloudretro-setup-workers.yaml
#
#
# The following yaml script will install a cloud-retro setup in your Kubernetes cluster
# with the needed services. With an invalid configuration of course, for this to properly work
# You need the apply-config.sh minimalistic shell script to update the config with the unclear addresses.
#  
# Please not that this will only install the workers. For them to work, you will need a coordinator deployment as well.
#
# In short, no touching.
#
apiVersion: v1
kind: Namespace
metadata:
  name: cloudretro
---
# Worker deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: cloudretro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: ghcr.io/giongto35/cloud-game/cloud-game:v3.0.5
        command: ["./worker"]
        ports:
        - containerPort: 9000
        - containerPort: 8443
        volumeMounts:
        - name: game-mount
          mountPath: '/usr/local/share/cloud-game/assets/games/anguna.gba'
      volumes:
      - name: game-mount
        hostPath:
          path: '/games/anguna.gba'
          type: File
---
# Worker LoadBalancer for HTTP
apiVersion: v1
kind: Service
metadata:
  name: worker-lb-svc
  namespace: cloudretro
spec:
  selector:
    app: worker
  ports:
    - port: 9000
      targetPort: 9000
      #nodePort: 30002
  type: LoadBalancer
---
# Worker ClusterIP for STUNner forwarding
apiVersion: v1
kind: Service
metadata:
  name: worker-ci-udp-svc
  namespace: cloudretro
spec:
  selector:
    app: worker
  ports:
    - protocol: UDP
      port: 8443
      targetPort: 8443
  type: ClusterIP
