scripts/cloudretro-custom/cloudretro-stunner-cleanup.yaml
# Script for the required STUNner components for CloudRetro
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
  namespace: stunner
spec:
  gatewayClassName: stunner-gatewayclass
  listeners:
    - name: udp-listener
      port: 3478
      protocol: TURN-UDP
